--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="ra.sekhnet.bordns_client">
-   <application
+    <uses-permission android:name="android.permission.INTERNET" />
+    <application
         android:label="bordns_client"
         android:icon="@mipmap/ic_launcher">
         <activity
