--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
   ubuntu_font_flutter: ^0.0.1
   http: ^0.13.4
-  shimmer: ^2.0.0
+  animate_do: ^2.0.0
 
 
 dev_dependencies:
